commited css file modifications

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-
 body {
-  //css code css code	
-  //css code css code	
-
-}
+  background-color: #333;
+  color: #333;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+ }
